# PokeExpansion

./: .gitignore  .gitmodules  BPEE.ld  CMakeLists.txt  Makefile  bytereplacement  charmap.txt  hooks  linker.ld  repoints  run.sh
graphics/pokemon/cherrim/: anim_front.4bpp  anim_front.4bpp.lz  normal.gbapal  normal.gbapal.lz
graphics/pokemon/combee/: anim_front.4bpp  anim_front.4bpp.lz
graphics/pokemon/druddigon/: anim_front.4bpp  anim_front.4bpp.lz
graphics/pokemon/frillish/: backf.4bpp  backf.4bpp.lz  normalf.gbapal  normalf.gbapal.lz
graphics/pokemon/hippopotas/: anim_front.4bpp  anim_front.4bpp.lz  anim_frontf.4bpp  anim_frontf.4bpp.lz  backf.4bpp  backf.4bpp.lz
graphics/pokemon/hippowdon/: backf.4bpp  backf.4bpp.lz
graphics/pokemon/jellicent/: normalf.gbapal  normalf.gbapal.lz
graphics/pokemon/landorus/: anim_front.4bpp  anim_front.4bpp.lz
graphics/pokemon/magnemite/: normal.gbapal  normal.gbapal.lz
graphics/pokemon/meloetta/: anim_front.4bpp  anim_front.4bpp.lz
scripts/: build  expansion.py  insert
src/: BallsExpansion.c  BallsExpansionAsm.s  DexExpansion.c  base_stats.c  cry_table.c  cry_tables.s  defines.h  dex.c  functions.h  graphics.c  hooks.s  item_expansion_asm.s  items_expansion.c  locations.h  species_name.c  structs.h  types.h
src/data/: abilities.h  base_stats.h  front_pic_anims.h  item_descriptions.h  item_icon_table.h  items.h  level_up_learnsets.h  move_names.h  tutor_learnsets.h
src/defines/: moves.h  pokemon.h  pokemon_animation.h  species.h
src/include/: items.h  moves.h  pokemon.h  species.h
(+28 files in other folders)
